# candyland

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  app_pseudocode.txt  candyland-prd.md  logging_config.md  test_game.py
.zumbro/: config.yaml
candyland/: README.md  app.py
candyland-website/: pyproject.toml
candyland/static/css/: style.css
candyland/templates/: game.html  setup.html
static/: style.css
static/css/: style.css
templates/: game.html  index.html  setup.html
