[tool.poetry]
name = "candyland-website"
version = "0.1.0"
description = ""
authors = ["petersomerville <pesomerville@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
